--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Stereo Drum Kit</title>
-  <style>
-    body {font-family: Arial, sans-serif; text-align: center; background: #111; color: white;}
-    h1 {margin: 20px 0;}
-    .drum-container {display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 30px;}
-    button {width: 100px; height: 100px; font-size: 18px; font-weight: bold; border: none; border-radius: 10px; background: #333; color: white; cursor: pointer; transition: 0.1s;}
-    button:active {background: #f39c12; transform: scale(0.95);}
-  </style>
-</head>
-<body>
-  <h1>🥁 Stereo Drum Kit</h1>
-  <p>Tap once to unlock sound, then play!</p>
-
-  <div class="drum-container">
-    <button onclick="playSound('kick')">Kick</button>
-    <button onclick="playSound('snare')">Snare</button>
-    <button onclick="playSound('hihat')">Hi-Hat</button>
-    <button onclick="playSound('tom1')">Tom 1</button>
-    <button onclick="playSound('tom2')">Tom 2</button>
-    <button onclick="playSound('crash')">Crash</button>
-  </div>
-
-  <script>
-    const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-    document.body.addEventListener("click", () => {
-      if (audioCtx.state === "suspended") audioCtx.resume();
-    }, { once: true });
-
-    function playSound(type) {
-      const panner = audioCtx.createStereoPanner();
-      if (type === 'hihat') panner.pan.value = 1;       // right
-      else if (type === 'tom1' || type === 'tom2') panner.pan.value = -1; // left
-      else panner.pan.value = 0; // center
-
-      if (type === 'kick') {
-        const osc = audioCtx.createOscillator();
-        const gain = audioCtx.createGain();
-        osc.connect(gain).connect(panner).connect(audioCtx.destination);
-        osc.type = "sine";
-        osc.frequency.setValueAtTime(150, audioCtx.currentTime);
-        osc.frequency.exponentialRampToValueAtTime(50, audioCtx.currentTime + 0.1);
-        gain.gain.setValueAtTime(1, audioCtx.currentTime);
-        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
-        osc.start(); osc.stop(audioCtx.currentTime + 0.1);
-      }
-      else if (type === 'snare') {
-        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.1, audioCtx.sampleRate);
-        const output = noiseBuffer.getChannelData(0);
-        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
-        const noise = audioCtx.createBufferSource();
-        noise.buffer = noiseBuffer;
-        const noiseGain = audioCtx.createGain();
-        noiseGain.gain.setValueAtTime(1, audioCtx.currentTime);
-        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
-        noise.connect(noiseGain).connect(panner).connect(audioCtx.destination);
-        noise.start(); noise.stop(audioCtx.currentTime + 0.1);
-      }
-      else if (type === 'hihat') {
-        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.05, audioCtx.sampleRate);
-        const output = noiseBuffer.getChannelData(0);
-        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
-        const noise = audioCtx.createBufferSource();
-        noise.buffer = noiseBuffer;
-        const bandpass = audioCtx.createBiquadFilter();
-        bandpass.type = "highpass"; bandpass.frequency.value = 5000;
-        const noiseGain = audioCtx.createGain();
-        noiseGain.gain.setValueAtTime(0.5, audioCtx.currentTime);
-        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.05);
-        noise.connect(bandpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
-        noise.start(); noise.stop(audioCtx.currentTime + 0.05);
-      }
-      else {
-        const osc = audioCtx.createOscillator();
-        const gain = audioCtx.createGain();
-        osc.connect(gain).connect(panner).connect(audioCtx.destination);
-        osc.type = "square";
-        osc.frequency.value = type === 'tom1' ? 200 : type === 'tom2' ? 150 : 400;
-        gain.gain.setValueAtTime(0.7, audioCtx.currentTime);
-        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.15);
-        osc.start(); osc.stop(audioCtx.currentTime + 0.15);
-      }
-    }
-  </script>
-</body>
-</html>
+test
