--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Stereo Drum Kit</title>
+  <title>9-Instrument Drumpos</title>
   <style>
     body {font-family: Arial, sans-serif; text-align: center; background: #111; color: white;}
     h1 {margin: 20px 0;}
-    .drum-container {display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 30px;}
-    button {width: 100px; height: 100px; font-size: 18px; font-weight: bold; border: none; border-radius: 10px; background: #333; color: white; cursor: pointer; transition: 0.1s;}
+    .drum-container {display: flex; flex-direction: column; align-items: center; gap: 20px; margin-top: 30px;}
+    .row {display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;}
+    button {width: 110px; height: 110px; font-size: 14px; font-weight: bold; border: none; border-radius: 12px; background: linear-gradient(145deg,#444,#222); color: white; cursor: pointer; box-shadow: 3px 3px 6px #000; transition: 0.1s;}
     button:active {background: #f39c12; transform: scale(0.95);}
   </style>
 </head>
 <body>
-  <h1>🥁 Stereo Drum Kit</h1>
+  <h1>🥁 9-Instrument Drumpos</h1>
+  <p>Row 1 = Left, Row 2 = Right, Row 3 = Center</p>
   <p>Tap once to unlock sound, then play!</p>
 
   <div class="drum-container">
-    <button onclick="playSound('kick')">Kick</button>
-    <button onclick="playSound('snare')">Snare</button>
-    <button onclick="playSound('hihat')">Hi-Hat</button>
-    <button onclick="playSound('tom1')">Tom 1</button>
-    <button onclick="playSound('tom2')">Tom 2</button>
-    <button onclick="playSound('crash')">Crash</button>
+    <div class="row">
+      <button onclick="playSound('kick','left')">Kick</button>
+      <button onclick="playSound('snare','left')">Snare</button>
+      <button onclick="playSound('hihat','left')">Hi-Hat</button>
+      <button onclick="playSound('tom1','left')">Tom 1</button>
+      <button onclick="playSound('tom2','left')">Tom 2</button>
+      <button onclick="playSound('crash','left')">Crash</button>
+      <button onclick="playSound('ride','left')">Ride</button>
+      <button onclick="playSound('clap','left')">Clap</button>
+      <button onclick="playSound('cowbell','left')">Cowbell</button>
+    </div>
+    <div class="row">
+      <button onclick="playSound('kick','right')">Kick</button>
+      <button onclick="playSound('snare','right')">Snare</button>
+      <button onclick="playSound('hihat','right')">Hi-Hat</button>
+      <button onclick="playSound('tom1','right')">Tom 1</button>
+      <button onclick="playSound('tom2','right')">Tom 2</button>
+      <button onclick="playSound('crash','right')">Crash</button>
+      <button onclick="playSound('ride','right')">Ride</button>
+      <button onclick="playSound('clap','right')">Clap</button>
+      <button onclick="playSound('cowbell','right')">Cowbell</button>
+    </div>
+    <div class="row">
+      <button onclick="playSound('kick','center')">Kick</button>
+      <button onclick="playSound('snare','center')">Snare</button>
+      <button onclick="playSound('hihat','center')">Hi-Hat</button>
+      <button onclick="playSound('tom1','center')">Tom 1</button>
+      <button onclick="playSound('tom2','center')">Tom 2</button>
+      <button onclick="playSound('crash','center')">Crash</button>
+      <button onclick="playSound('ride','center')">Ride</button>
+      <button onclick="playSound('clap','center')">Clap</button>
+      <button onclick="playSound('cowbell','center')">Cowbell</button>
+    </div>
   </div>
 
   <script>
@@ -30,58 +60,98 @@
       if (audioCtx.state === "suspended") audioCtx.resume();
     }, { once: true });
 
-    function playSound(type) {
+    function playSound(type, position) {
       const panner = audioCtx.createStereoPanner();
-      if (type === 'hihat') panner.pan.value = 1;       // right
-      else if (type === 'tom1' || type === 'tom2') panner.pan.value = -1; // left
-      else panner.pan.value = 0; // center
+      if (position === 'left') panner.pan.value = -1;
+      else if (position === 'right') panner.pan.value = 1;
+      else panner.pan.value = 0;
 
       if (type === 'kick') {
         const osc = audioCtx.createOscillator();
         const gain = audioCtx.createGain();
         osc.connect(gain).connect(panner).connect(audioCtx.destination);
         osc.type = "sine";
-        osc.frequency.setValueAtTime(150, audioCtx.currentTime);
-        osc.frequency.exponentialRampToValueAtTime(50, audioCtx.currentTime + 0.1);
+        osc.frequency.setValueAtTime(120, audioCtx.currentTime);
+        osc.frequency.exponentialRampToValueAtTime(40, audioCtx.currentTime + 0.12);
         gain.gain.setValueAtTime(1, audioCtx.currentTime);
-        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
-        osc.start(); osc.stop(audioCtx.currentTime + 0.1);
+        gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.12);
+        osc.start(); osc.stop(audioCtx.currentTime + 0.12);
       }
       else if (type === 'snare') {
-        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.1, audioCtx.sampleRate);
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.2, audioCtx.sampleRate);
         const output = noiseBuffer.getChannelData(0);
         for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
         const noise = audioCtx.createBufferSource();
         noise.buffer = noiseBuffer;
         const noiseGain = audioCtx.createGain();
         noiseGain.gain.setValueAtTime(1, audioCtx.currentTime);
-        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
-        noise.connect(noiseGain).connect(panner).connect(audioCtx.destination);
-        noise.start(); noise.stop(audioCtx.currentTime + 0.1);
+        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.15);
+        const bandpass = audioCtx.createBiquadFilter();
+        bandpass.type = "bandpass"; bandpass.frequency.value = 1800;
+        noise.connect(bandpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + 0.15);
       }
-      else if (type === 'hihat') {
-        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.05, audioCtx.sampleRate);
+      else if (type === 'hihat' || type === 'ride') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.2, audioCtx.sampleRate);
+        const output = noiseBuffer.getChannelData(0);
+        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
+        const noise = audioCtx.createBufferSource();
+        noise.buffer = noiseBuffer;
+        const highpass = audioCtx.createBiquadFilter();
+        highpass.type = "highpass"; highpass.frequency.value = (type === 'hihat') ? 6000 : 3000;
+        const noiseGain = audioCtx.createGain();
+        noiseGain.gain.setValueAtTime(0.6, audioCtx.currentTime);
+        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + ((type === 'hihat') ? 0.05 : 0.3));
+        noise.connect(highpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + ((type === 'hihat') ? 0.05 : 0.3));
+      }
+      else if (type === 'crash') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 1.5, audioCtx.sampleRate);
+        const output = noiseBuffer.getChannelData(0);
+        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
+        const noise = audioCtx.createBufferSource();
+        noise.buffer = noiseBuffer;
+        const highpass = audioCtx.createBiquadFilter();
+        highpass.type = "highpass"; highpass.frequency.value = 4000;
+        const noiseGain = audioCtx.createGain();
+        noiseGain.gain.setValueAtTime(1, audioCtx.currentTime);
+        noiseGain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 1.0);
+        noise.connect(highpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + 1.0);
+      }
+      else if (type === 'clap') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.15, audioCtx.sampleRate);
         const output = noiseBuffer.getChannelData(0);
         for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
         const noise = audioCtx.createBufferSource();
         noise.buffer = noiseBuffer;
         const bandpass = audioCtx.createBiquadFilter();
-        bandpass.type = "highpass"; bandpass.frequency.value = 5000;
-        const noiseGain = audioCtx.createGain();
-        noiseGain.gain.setValueAtTime(0.5, audioCtx.currentTime);
-        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.05);
-        noise.connect(bandpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
-        noise.start(); noise.stop(audioCtx.currentTime + 0.05);
+        bandpass.type = "bandpass"; bandpass.frequency.value = 2000;
+        const gain = audioCtx.createGain();
+        gain.gain.setValueAtTime(1, audioCtx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
+        noise.connect(bandpass).connect(gain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + 0.1);
       }
-      else {
+      else if (type === 'cowbell') {
         const osc = audioCtx.createOscillator();
         const gain = audioCtx.createGain();
         osc.connect(gain).connect(panner).connect(audioCtx.destination);
         osc.type = "square";
-        osc.frequency.value = type === 'tom1' ? 200 : type === 'tom2' ? 150 : 400;
+        osc.frequency.setValueAtTime(540, audioCtx.currentTime);
         gain.gain.setValueAtTime(0.7, audioCtx.currentTime);
-        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.15);
-        osc.start(); osc.stop(audioCtx.currentTime + 0.15);
+        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.25);
+        osc.start(); osc.stop(audioCtx.currentTime + 0.25);
+      }
+      else { // toms
+        const osc = audioCtx.createOscillator();
+        const gain = audioCtx.createGain();
+        osc.connect(gain).connect(panner).connect(audioCtx.destination);
+        osc.type = "sine";
+        osc.frequency.value = type === 'tom1' ? 200 : 120;
+        gain.gain.setValueAtTime(0.8, audioCtx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.2);
+        osc.start(); osc.stop(audioCtx.currentTime + 0.2);
       }
     }
   </script>
