--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +10,8 @@
     .row {display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;}
     button {width: 110px; height: 110px; font-size: 14px; font-weight: bold; border: none; border-radius: 12px; background: linear-gradient(145deg,#444,#222); color: white; cursor: pointer; box-shadow: 3px 3px 6px #000; transition: 0.1s;}
     button:active {background: #f39c12; transform: scale(0.95);}
+    .controls {margin-top: 40px;}
+    .controls button {width: 150px; height: 50px; font-size: 16px; border-radius: 10px;}
   </style>
 </head>
 <body>
@@ -20,38 +21,43 @@
 
   <div class="drum-container">
     <div class="row">
-      <button onclick="playSound('kick','left')">Kick</button>
-      <button onclick="playSound('snare','left')">Snare</button>
-      <button onclick="playSound('hihat','left')">Hi-Hat</button>
-      <button onclick="playSound('tom1','left')">Tom 1</button>
-      <button onclick="playSound('tom2','left')">Tom 2</button>
-      <button onclick="playSound('crash','left')">Crash</button>
-      <button onclick="playSound('ride','left')">Ride</button>
-      <button onclick="playSound('clap','left')">Clap</button>
-      <button onclick="playSound('cowbell','left')">Cowbell</button>
+      <button onclick="triggerPlay('kick','left')">Kick</button>
+      <button onclick="triggerPlay('snare','left')">Snare</button>
+      <button onclick="triggerPlay('hihat','left')">Hi-Hat</button>
+      <button onclick="triggerPlay('tom1','left')">Tom 1</button>
+      <button onclick="triggerPlay('tom2','left')">Tom 2</button>
+      <button onclick="triggerPlay('crash','left')">Crash</button>
+      <button onclick="triggerPlay('ride','left')">Ride</button>
+      <button onclick="triggerPlay('clap','left')">Clap</button>
+      <button onclick="triggerPlay('cowbell','left')">Cowbell</button>
     </div>
     <div class="row">
-      <button onclick="playSound('kick','right')">Kick</button>
-      <button onclick="playSound('snare','right')">Snare</button>
-      <button onclick="playSound('hihat','right')">Hi-Hat</button>
-      <button onclick="playSound('tom1','right')">Tom 1</button>
-      <button onclick="playSound('tom2','right')">Tom 2</button>
-      <button onclick="playSound('crash','right')">Crash</button>
-      <button onclick="playSound('ride','right')">Ride</button>
-      <button onclick="playSound('clap','right')">Clap</button>
-      <button onclick="playSound('cowbell','right')">Cowbell</button>
+      <button onclick="triggerPlay('kick','right')">Kick</button>
+      <button onclick="triggerPlay('snare','right')">Snare</button>
+      <button onclick="triggerPlay('hihat','right')">Hi-Hat</button>
+      <button onclick="triggerPlay('tom1','right')">Tom 1</button>
+      <button onclick="triggerPlay('tom2','right')">Tom 2</button>
+      <button onclick="triggerPlay('crash','right')">Crash</button>
+      <button onclick="triggerPlay('ride','right')">Ride</button>
+      <button onclick="triggerPlay('clap','right')">Clap</button>
+      <button onclick="triggerPlay('cowbell','right')">Cowbell</button>
     </div>
     <div class="row">
-      <button onclick="playSound('kick','center')">Kick</button>
-      <button onclick="playSound('snare','center')">Snare</button>
-      <button onclick="playSound('hihat','center')">Hi-Hat</button>
-      <button onclick="playSound('tom1','center')">Tom 1</button>
-      <button onclick="playSound('tom2','center')">Tom 2</button>
-      <button onclick="playSound('crash','center')">Crash</button>
-      <button onclick="playSound('ride','center')">Ride</button>
-      <button onclick="playSound('clap','center')">Clap</button>
-      <button onclick="playSound('cowbell','center')">Cowbell</button>
+      <button onclick="triggerPlay('kick','center')">Kick</button>
+      <button onclick="triggerPlay('snare','center')">Snare</button>
+      <button onclick="triggerPlay('hihat','center')">Hi-Hat</button>
+      <button onclick="triggerPlay('tom1','center')">Tom 1</button>
+      <button onclick="triggerPlay('tom2','center')">Tom 2</button>
+      <button onclick="triggerPlay('crash','center')">Crash</button>
+      <button onclick="triggerPlay('ride','center')">Ride</button>
+      <button onclick="triggerPlay('clap','center')">Clap</button>
+      <button onclick="triggerPlay('cowbell','center')">Cowbell</button>
     </div>
+  </div>
+
+  <div class="controls">
+    <button onclick="enableLoop()">Enable Loop</button>
+    <button onclick="stopLoop()">Stop Loop</button>
   </div>
 
   <script>
@@ -59,6 +65,30 @@
     document.body.addEventListener("click", () => {
       if (audioCtx.state === "suspended") audioCtx.resume();
     }, { once: true });
+
+    let loopInterval = null;
+    let lastPlayed = null;
+
+    function triggerPlay(type, position) {
+      lastPlayed = {type, position}; // store last played instrument
+      playSound(type, position);
+    }
+
+    function enableLoop() {
+      if (!lastPlayed) {
+        alert("Play an instrument first, then enable loop.");
+        return;
+      }
+      if (loopInterval) clearInterval(loopInterval);
+      loopInterval = setInterval(() => {
+        playSound(lastPlayed.type, lastPlayed.position);
+      }, 500); // every 500ms (adjust tempo as needed)
+    }
+
+    function stopLoop() {
+      clearInterval(loopInterval);
+      loopInterval = null;
+    }
 
     function playSound(type, position) {
       const panner = audioCtx.createStereoPanner();
